--- a/templates/normal_user_room_search.html
+++ b/templates/normal_user_room_search.html
@@ -11,7 +11,7 @@
             <script>
             </script>
             <div id="common_info_form">
-                <div id="common_info_filter" style="width:100%; height:21.429%;margin-top:8%;">
+                <div id="common_info_filter" style="width:100%; height:21.429%;">
                     <span style="display:block; height:100%; line-height:1;">공유 시설</span>
                 </div>
                 <div id="common_info_selects">
@@ -33,42 +33,14 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <label class = "label">학교와의 거리(km) <input style ="margin-top:3%;" type="range" id="proof" list="tickmarks1" class="range" min="100" max="1000" step="100"></label>
-            </div>
-            <div style="width:100%;">
-            <datalist id="tickmarks1">
-                <option value="0.1" label = "0.1"></option>
-                <option value="0.2" label = "0.2"></option>
-                <option value="0.3" label = "0.3"></option>
-                <option value="0.4" label = "0.4"></option>
-                <option value="0.5" label = "0.5"></option>
-                <option value="0.6" label = "0.6"></option>
-                <option value="0.7" label = "0.7"></option>
-                <option value="0.8" label = "0.8"></option>
-                <option value="0.9" label = "0.9"></option>
-                <option value="1" label = "1"></option>
-            </datalist>
-                </div>
-            <br><div>
-                <label class = "label">주변 편의시설 수 <input style ="margin-top:3%;" type="range" list="tickmarks2" class="range" min="0" max="5" step="1"></label>
-            </div>
-            <datalist id="tickmarks2">
-                <option value="0" label = "0"></option>
-                <option value="1" label = "1"></option>
-                <option value="2" label = "2"></option>
-                <option value="3" label = "3"></option>
-                <option value="4" label = "4"></option>
-                <option value="5" label = "5"></option>
-            </datalist>
             <div id="text_form">
-                <div>검색 텍스트</div>
+                <div id="search_address">검색할 주소</div>
                 <div id="address_filter">
                     <input class="form-control" type="search" placeholder="주소 입력" aria-label="Search" id="address2" name="address">
                 </div>
-                <div id="submit-div">
-                    <a href="javascript:(0)" onclick="document.getElementById('search_filter').submit();" id="submit">적용</a>
-                </div>
+            </div>
+            <div id="submit-div">
+                <a href="javascript:(0)" onclick="document.getElementById('search_filter').submit();" id="submit">적용</a>
             </div>
         </form>
     </div>
