원룸 작성 이미지 입력 수정

--- a/static/css/normalUserRoomWriteTemplate.css
+++ b/static/css/normalUserRoomWriteTemplate.css
@@ -19,6 +19,12 @@ img {
   height: 100%;
   display: flex;
   float: left;
+  overflow-x: scroll;
+}
+
+.image-preview > div {
+  flex: 0 0 60%;
+  flex-wrap: nowrap;
 }
 
 input[type=number]::-webkit-outer-spin-button,
