--- a/templates/normal_user_room_read.html
+++ b/templates/normal_user_room_read.html
@@ -7,7 +7,11 @@
 <div id="reviewinfo" >
     <div style ="margin:20px;">
         <div style="width:24.7%; height:245px; margin-right:20px; display: inline-block;float:left;">
+            {% if room.roomImage %}
                 <img src="{% static 'images/roomImage/' %}{{room.roomImage|first}}" style="width:100%; height:100%;">
+            {% else %}
+                <img src="{% static 'images/iconImage/no-photo.png' %}" style="width:100%; height:100%;">
+            {% endif %}
         </div>
         <div id="mapDiv" style = "display:inline-block;"></div>
         <script>
