--- a/templates/normal_user_room_read.html
+++ b/templates/normal_user_room_read.html
@@ -7,11 +7,7 @@
 <div id="reviewinfo" >
     <div style ="margin:20px;">
         <div style="width:24.7%; height:245px; margin-right:20px; display: inline-block;float:left;">
-            {% if room.roomImage %}
-                <img src="{% static 'images/roomImage/' %}{{room.roomImage|first}}" style="width:100%; height:100%;">
-            {% else %}
-                <img src="{% static 'images/iconImage/no-photo.png' %}" style="width:100%; height:100%;">
-            {% endif %}
+            <img src="{% static 'images/roomImage/' %}{{room.roomImage|first|defaultRoomImage}}" style="width:100%; height:100%;">
         </div>
         <div id="mapDiv" style = "display:inline-block;"></div>
         <script>
@@ -87,15 +83,10 @@
                 <div style="display:flex; justify-content: right; margin: 1.7% 6.25% auto auto;">
                     <div style="display: inline-block;padding-right: 2%;">
                         <select id="sort_select_box" name="sort_select_box" onchange="sort()">
-                            <option value="1">최신 순</option>
-                            {#            현재 주소에서 &sorted=1 파라미터 붙을때#}
-                            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=1 #}
-                            <option value="2">추천 순</option>
-                            {#            현재 주소에서 &sorted=2 파라미터 붙을때#}
-                            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=2 #}
-                            <option value="3">정확도 순</option>
-                            {#            현재 주소에서 &sorted=3 파라미터 붙을때#}
-                            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=3 #}
+                            <option value=''>정렬 순</option>
+                            <option value="1" {% if sorted == '1' %}selected{% endif %}>최신 순</option>
+                            <option value="2" {% if sorted == '2' %}selected{% endif %}>추천 순</option>
+                            <option value="3" {% if sorted == '3' %}selected{% endif %}>정확도 순</option>
                         </select>
                     </div>
                     <div>
@@ -135,6 +126,20 @@
         </div>
     </div>
 </div>
+    <script>
+        $("select[name=sort_select_box]").change(function(){
+            var currentUrl = location.pathname
+
+            console.log(currentUrl)
+            console.log($(this).val()); //value값 가져오기 => (1,2,3)
+            console.log($("select[name=sort_select_box] option:selected").text()); //text값 가져오기 => (최신순, 추천순, )
+
+            var sorted_value = $(this).val()
+            const urlSearch = new URLSearchParams(location.search);
+            urlSearch.set('sorted', sorted_value)
+            window.open(location.pathname + '?' + urlSearch, '_self');
+        });
+    </script>
 <link rel="stylesheet" href="{% static 'css/normalUserRoomReadTemplate.css' %}">
 <script type="text/javascript" src="{% static 'js/normalUserRoomReadTemplate.js' %}"></script>
 {% endblock %}
