--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -36,12 +36,13 @@ $(document).ready(function(){
                     </div>
                     <div style = "float:right; height:100%;">추천 수 : {{ popular_review.recommendedOn|length }}</div>
                 </div>
-                {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
-                <div style="color:black; height:10%; font-weight: 600; font-size:20px; cursor:pointer;" onclick="window.location.replace('{{normalUserReviewRead}}?id={{popular_review.id}}')">{{ popular_review.reviewTitle }}</div>
-                <div class="pop-img" style="height:20%;">
-                    <img class="left-side-room-img" style="width:100%; height:100%;" src="{% static 'images/' %}{{ popular_review.additionalImage|first }}">
+                <div class="pop-img" style="display:flex; justify-content: center; height:25%;">
+                    <img class="left-side-room-img" style="height:100%;" src="{% static 'images/reviewImage/' %}{{ popular_review.representiveImage|defaultImage }}">
                 </div>
-                <div style = "display:flex; justify-content:center; height:50%;width:100%;">
+                {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
+                <div style="text-align:center; color:black; height:10%; font-weight: 600; font-size:20px; cursor:pointer;" onclick="window.location.replace('{{normalUserReviewRead}}?id={{popular_review.id}}')">{{ popular_review.reviewTitle }}</div>
+
+                <div style = "display:flex; justify-content:center; height:45%;width:100%;">
                     <div style="width:70%;">
                         <span>리뷰 내용 : {{ popular_review.reviewSentence }}</span>
                     </div>
@@ -69,12 +70,13 @@ $(document).ready(function(){
                     </div>
                     <div style = "float:right; height:100%;">추천 수 : {{ latest_review.recommendedOn|length }}</div>
                 </div>
-                {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
-                <div style="color:black; height:10%; font-weight: 600; font-size:20px; cursor:pointer;" onclick="window.location.replace('{{normalUserReviewRead}}?id={{latest_review.id}}')">{{ latest_review.reviewTitle }}</div>
-                <div class="pop-img" style="height:20%;">
-                    <img class="left-side-room-img" style="width:100%; height:100%;" src="{% static 'images/' %}{{ latest_review.additionalImage|first }}">
+                <div class="pop-img" style="display:flex; justify-content: center; height:25%;">
+                    <img class="left-side-room-img" style="height:100%;" src="{% static 'images/reviewImage/' %}{{ latest_review.representiveImage|defaultImage }}">
                 </div>
-                <div style = "display:flex; justify-content:center; height:50%;width:100%;">
+                {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
+                <div style="text-align:center; color:black; height:10%; font-weight: 600; font-size:20px; cursor:pointer;" onclick="window.location.replace('{{normalUserReviewRead}}?id={{latest_review.id}}')">{{ latest_review.reviewTitle }}</div>
+
+                <div style = "display:flex; justify-content:center; height:45%;width:100%;">
                     <div style="width:70%;">
                         <span>리뷰 내용 : {{ latest_review.reviewSentence }}</span>
                     </div>
