원룸 등록 시 학교와 거리 측정(진행 중)

--- a/static/css/normalUserRoomSearchTemplate.css
+++ b/static/css/normalUserRoomSearchTemplate.css
@@ -15,7 +15,7 @@
   border-radius: 8px;
 }
 
-#mainDiv::-webkit-scrollbar-track {
+#leftSideMenu::-webkit-scrollbar-track {
   background-color: #FFFFFF;
 }
 
