--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -44,11 +44,16 @@ $(document).ready(function(){
 
                 <div style = "display:flex; justify-content:center; height:45%;width:100%;">
                     <div style="width:70%;">
-                        <span>리뷰 내용 : {{ popular_review.reviewSentence }}</span>
+                        <span>
+                            {{popular_review.totalReview|slice:"0:60"}}
+                            {% if popular_review.totalReview|length > 60 %}
+                                ...
+                            {% endif %}
+                        </span>
                     </div>
                 </div>
-                <div style = "height:10%;">
-                    <div style="height:100%; display:flex; align-items:center;">
+                <div style = "display:flex; justify-content:center; height:10%;">
+                    <div style="width:70%; height:100%; display:flex; align-items:center;">
                         {% for popular_icon in popular_review.includedIcon %}
                             <img class="icon" style ="margin:5px;float:left;" src="{% static 'images/iconImage/' %}{{ popular_icon }}.png">
                         {% endfor %}
@@ -78,7 +83,12 @@ $(document).ready(function(){
 
                 <div style = "display:flex; justify-content:center; height:45%;width:100%;">
                     <div style="width:70%;">
-                        <span>리뷰 내용 : {{ latest_review.reviewSentence }}</span>
+                        <span>
+                            {{ latest_review.totalReview|slice:"0:60" }}
+                            {% if latest_review.totalReview|length > 60 %}
+                                ...
+                            {% endif %}
+                        </span>
                     </div>
                 </div>
                 <div style = "height:10%;">
