--- a/static/css/normalUserReviewWriteTemplate.scss
+++ b/static/css/normalUserReviewWriteTemplate.scss
@@ -102,3 +102,23 @@ datalist {
     width:40%;
     margin-left:7%;
 }
+#review_sentence{
+    height: 100%;
+    width: 100%;
+    text-align:left;
+    overflow-y:scroll;
+    overflow-x:hidden;
+}
+#review_sentence::-webkit-scrollbar{
+  width:16px;
+}
+#review_sentence::-webkit-scrollbar-thumb{
+  width:8px;
+  background-color:#C6C6C6;
+  background-clip:padding-box;
+  border:4px solid transparent;
+  border-radius:8px;
+}
+#review_sentence::-webkit-scrollbar-track{
+  background-color:#FFFFFF;
+}
