--- a/static/css/normalUserRoomSearchTemplate.scss
+++ b/static/css/normalUserRoomSearchTemplate.scss
@@ -12,7 +12,7 @@
   border:4px solid transparent;
   border-radius:8px;
 }
-#mainDiv::-webkit-scrollbar-track{
+#leftSideMenu::-webkit-scrollbar-track{
   background-color:#FFFFFF;
 }
 #search_filter{
