--- a/templates/normal_user_review_write.html
+++ b/templates/normal_user_review_write.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div style="height: 42%; border:2px solid #B3B3B3;">
-                    <div contenteditable class="fake_textarea" style="height: 100%; width: 100%; text-align:left;" id="review_sentence"></div>
+                    <div contenteditable class="fake_textarea" id="review_sentence"></div>
                     <input style="display:none;" name="review_sentence" id="review_sentence1">
                 </div>
                 <div style="padding-top: 3.038%">
@@ -126,14 +126,30 @@
                     images += "{{ img }}" // 이미지에 대한 소스코드는 이후 수정 예정
                 {% endfor %}
                 document.getElementsByClassName('image-preview')[0].innerHTML = images
-                document.getElementsByName('checking')[{{review.rent}}].checked = true;
-                document.getElementById('id_deposit').value= {{ review.deposit }};
-                document.getElementById('monthly').value= {{ review.monthlyRent }}
-                document.getElementById('id_roomSize').value= {{ review.roomSize }}
-                document.getElementById('humidity').value= {{ review.humidity }}
-                document.getElementById('proof').value= {{ review.proof }}
-                document.getElementById('sunshine').value= {{ review.sunshine }}
-                document.getElementById('clean').value= {{ review.clean }}
+                {% if review.rent %}
+                    document.getElementsByName('checking')[{{review.rent}}].checked = true;
+                {% endif %}
+                {% if review.deposit %}
+                    document.getElementById('id_deposit').value= {{ review.deposit }};
+                {% endif %}
+                {% if review.monthlyRent %}
+                    document.getElementById('monthly').value= {{ review.monthlyRent }}
+                {% endif %}
+                {% if review.roomSize %}
+                    document.getElementById('id_roomSize').value= {{ review.roomSize }}
+                {% endif %}
+                {% if review.humidity %}
+                    document.getElementById('humidity').value= {{ review.humidity }}
+                {% endif %}
+                {% if review.proof %}
+                    document.getElementById('proof').value= {{ review.proof }}
+                {% endif %}
+                {% if review.sunshine %}
+                    document.getElementById('sunshine').value= {{ review.sunshine }}
+                {% endif %}
+                {% if review.clean %}
+                    document.getElementById('clean').value= {{ review.clean }}
+                {% endif %}
 
                 {% for sentence in review.reviewSentence %}
                     text += "{{ sentence }}\n"
