--- a/static/css/normalUserReviewSearchTemplate.css
+++ b/static/css/normalUserReviewSearchTemplate.css
@@ -1,3 +1,24 @@
+#leftSideMenu {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+#leftSideMenu::-webkit-scrollbar {
+  width: 16px;
+}
+
+#leftSideMenu::-webkit-scrollbar-thumb {
+  width: 8px;
+  background-color: #C6C6C6;
+  background-clip: padding-box;
+  border: 4px solid transparent;
+  border-radius: 8px;
+}
+
+#leftSideMenu::-webkit-scrollbar-track {
+  background-color: #FFFFFF;
+}
+
 #search_filter {
   width: 100%;
   height: 100%;
@@ -102,6 +123,126 @@ div#written_date_selects_div {
   width: 100%;
   height: 25%;
   line-height: 1;
+}
+
+#humidity {
+  width: 100%;
+  height: 25%;
+  line-height: 1;
+  margin-bottom: 8%;
+}
+
+#soundproof {
+  width: 100%;
+  height: 25%;
+  line-height: 1;
+  margin-bottom: 8%;
+}
+
+#lighting {
+  width: 100%;
+  height: 25%;
+  line-height: 1;
+  margin-bottom: 8%;
+}
+
+#cleanliness {
+  width: 100%;
+  height: 25%;
+  line-height: 1;
+  margin-bottom: 8%;
+}
+
+.sliders_control {
+  position: relative;
+  min-height: 20px;
+}
+
+.form_control {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  height: 40%;
+  color: #635a5a;
+  text-align: center;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  pointer-events: all;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px #C6C6C6;
+  cursor: pointer;
+}
+
+input[type=range]::-moz-range-thumb {
+  -webkit-appearance: none;
+  pointer-events: all;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px #C6C6C6;
+  cursor: pointer;
+}
+
+input[type=range]::-webkit-slider-thumb:hover {
+  background: #f7f7f7;
+}
+
+input[type=range]::-webkit-slider-thumb:active {
+  box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe;
+  -webkit-box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe;
+}
+
+input[type=number] {
+  color: #8a8383;
+  width: 50px;
+  height: 30px;
+  font-size: 20px;
+  border: none;
+  -moz-appearance: textfield;
+  text-align: center;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  opacity: 1;
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 2px;
+  width: 100%;
+  position: absolute;
+  background-color: #C6C6C6;
+  pointer-events: none;
+}
+
+#humidityFromSlider {
+  height: 0;
+  z-index: 1;
+}
+
+#soundproofFromSlider {
+  height: 0;
+  z-index: 1;
+}
+
+#lightingFromSlider {
+  height: 0;
+  z-index: 1;
+}
+
+#cleanlinessFromSlider {
+  height: 0;
+  z-index: 1;
 }
 
 #address_filter {
