--- a/templates/normal_user_room_search.html
+++ b/templates/normal_user_room_search.html
@@ -55,7 +55,7 @@
             <br>
             <div id="convNum">
                 <div id="convNum_title">
-                    300미터 이내 편의점 수
+                    반경 100미터 이내 편의점 수
                 </div><br>
                 <div class="sliders_control">
                     <input name="convNum_from" id="fromSlider2" type="range" value="1" min="1" max="10" step="1"/>
