--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -37,7 +37,7 @@ $(document).ready(function(){
                     <div style = "float:right; height:100%;">추천 수 : {{ popular_review.recommendedOn|length }}</div>
                 </div>
                 <div class="pop-img" style="display:flex; justify-content: center; height:25%;">
-                    <img class="left-side-room-img" style="height:100%;" src="{% static 'images/reviewImage/' %}{{ popular_review.representiveImage|defaultImage }}">
+                    <img class="left-side-room-img" style="height:100%;" src="{% static 'images/reviewImage/' %}{{ popular_review.representiveImage|defaultImage:'review' }}">
                 </div>
                 {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
                 <div style="text-align:center; color:black; height:10%; font-weight: 600; font-size:20px; cursor:pointer;" onclick="window.location.replace('{{normalUserReviewRead}}?id={{popular_review.id}}')">{{ popular_review.reviewTitle }}</div>
@@ -76,7 +76,7 @@ $(document).ready(function(){
                     <div style = "float:right; height:100%;">추천 수 : {{ latest_review.recommendedOn|length }}</div>
                 </div>
                 <div class="pop-img" style="display:flex; justify-content: center; height:25%;">
-                    <img class="left-side-room-img" style="height:100%;" src="{% static 'images/reviewImage/' %}{{ latest_review.representiveImage|defaultImage }}">
+                    <img class="left-side-room-img" style="height:100%;" src="{% static 'images/reviewImage/' %}{{ latest_review.representiveImage|defaultImage:'review' }}">
                 </div>
                 {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
                 <div style="text-align:center; color:black; height:10%; font-weight: 600; font-size:20px; cursor:pointer;" onclick="window.location.replace('{{normalUserReviewRead}}?id={{latest_review.id}}')">{{ latest_review.reviewTitle }}</div>
