--- a/templates/normal_user_review_list.html
+++ b/templates/normal_user_review_list.html
@@ -14,7 +14,7 @@
             {% for review in paged_review %}
                 <div class="review" style="cursor: default;">
                     <div class="review_image">
-                        <img src="{% static 'images/reviewImage/' %}{{review.representiveImage|defaultImage}}" style="height:100%; width:100%;">
+                        <img src="{% static 'images/reviewImage/' %}{{review.representiveImage|defaultImage:'review'}}" style="height:100%; width:100%;">
                     </div>
                     <div class="review_info">
                         <div class="review_title" style="color:black; cursor: pointer;">
