--- a/templates/normal_user_room_search.html
+++ b/templates/normal_user_room_search.html
@@ -95,7 +95,7 @@
                 <div class="room" onclick="window.location.replace('{{roomRead}}?roomId={{room.id}}')"
                      style="cursor: pointer">
                     <div class="image">
-                        <img src="{% static 'images/roomImage/' %}{{room.roomImage|first|defaultRoomImage}}" style="width:100%; height:100%;">
+                        <img src="{% static 'images/roomImage/' %}{{room.roomImage|first|defaultImage:'room'}}" style="width:100%; height:100%;">
                     </div>
                     <div class="info">
                         <div class="room_address">
